examples/test/testpolicy10592.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10592
  namespace: namespace355
spec:
  podSelector:
    matchLabels:
      key31: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value19
          key2: value20
          key4: value18
      podSelector:
        matchLabels:
          key45: value13
